# spreadsheet-analyser

./: .gitignore  PaxHeader  README.md  Spreadsheet_Analysis.ipynb  check_urls.py  csv_reader.ipynb  database_patterns.py  dataframe_utilities.py  db796a6c77a87072@45.js  detect_stylings.py  download_sheets.py  download_url.py  environment.yml  environment2.yml  heatmaps.py  index.html  index.js  merged_cells_testing.xlsx  pyproject.toml  schema.py  spreadsheets.db  spreadsheets_analysis.xlsx  table.py  tables.py  test_sheet_colored.xlsx  uniq_links.txt  uniq_links_copy.txt  urls.py  useful_functions.py  valid_urls.txt
.ipynb_checkpoints/: Spreadsheet_Analysis-checkpoint.ipynb  csv_reader-checkpoint.ipynb  sample_urls-checkpoint.py
heat_maps/: 69784fe59c63206f@340.js  README.md  assets  index.html  index.js  package.json  regdyn.css  upgrade.sh
interesting sheets/: 23-cs1-_Construction_Building_Materials_-_Tables_December_2022.xlsx  Construction_Building_Materials_-_Tables_December_2023.xlsx  rhi_rhpp_june_2013.xlsx
sample_csvs_2024-09-26_19-46-26/: covwarkpt_nhs_uk_download_cfm.csv  data_yorkopendata_org_dataset_524b86d4_4623_40d3_82a2_365b18e43aed_resource_4a3c65e9_40b2_4399_8465_b0fe82d44ac2_download_plossecondary2020.csv  data_yorkopendata_org_dataset_705cbb16_2b44_486d_8e8c_4fc18a36b775_resource_845d482a_c364_4978_b1da_460dd3a92cc9_download_kpi_ces36a.csv  dropbox_com_s_5uy0pj2f2eecvyv_Contracts_20Finder_20OCDS_202023_06_02.csv  dropbox_com_s_b3no5fjbdxx21gi_Contracts_20Finder_20OCDS_202017_03_21.csv  (+9 more)
(+606 files in other folders)
